[package]
name = "enrust"
version = "0.1.0"
edition = "2024"

[dependencies]
smallvec = "1.0"
rand = "0.10.0-rc.0"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "chess_benchmarks"
harness = false

[[bench]]
name = "perft_benchmarks"
harness = false

[[bench]]
name = "search_benchmarks"
harness = false